Add catalog page

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,53 +5,6 @@
 }
 
 @media screen and (max-width:1440px) {
-    .overlay-newest {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0;
-        transition: .5s ease;
-        background-color: rgba(0, 0, 0, .719)
-    }
-
-    .judul-karya-newest {
-        color: #fff;
-        font-size: 32px;
-        position: absolute;
-        top: 80%;
-        left: 25%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: 700;
-        text-transform: uppercase
-    }
-
-    .kreator-karya-newest {
-        color: #fbf348;
-        font-size: 20px;
-        position: absolute;
-        top: 85%;
-        left: 31.5%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: 700
-    }
-
-    .carousel-control-prev {
-        left: -45px
-    }
-
-    .carousel-control-next {
-        right: -45px
-    }
 
     a.uk-position-center-right.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-next.uk-slidenav {
         right: 18%
@@ -73,9 +26,9 @@
 
     .image-newest {
         display: block;
-        width: 830px;
-        height: 400px
-    }
+        width: auto;
+        height: auto;
+      }
 
     .slider-container.rev_slider_wrapper.fullscreen-slider {
         height: 106vh !important;
@@ -87,42 +40,6 @@
     .header-logo-display .menu-display {
         margin-top: 25px;
         margin-right: 50px
-    }
-
-    .judul-karya-newest {
-        color: #fff;
-        font-size: 32px;
-        position: absolute;
-        top: 80%;
-        left: 30%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: 700;
-        text-transform: uppercase
-    }
-
-    .kreator-karya-newest {
-        color: #fbf348;
-        font-size: 20px;
-        position: absolute;
-        top: 85%;
-        left: 37.5%;
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        text-align: center;
-        font-weight: 700
-    }
-
-    .uk-active img.img-news-funfact {
-        width: 85%;
-        height: 500px;
-        object-fit: cover;
-        margin-top: 0 !important;
-        transition: .5s;
-        margin-left: 90px
     }
 
     a.uk-position-center-left.uk-position-small.uk-hidden-hover.uk-icon.uk-slidenav-previous.uk-slidenav {
@@ -459,14 +376,6 @@
 
     section.featured {
         margin-top: 0
-    }
-
-    .carousel-control-prev {
-        left: -15px
-    }
-
-    .carousel-control-next {
-        right: -15px
     }
 
     .uk-active img.img-news-funfact {
