--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ input.search-home {
 }
 
 button.button-search-home {
-    padding: 7px;
+    height: 100%;
     width: 45px;
     background-color: #fbf348;
     border: unset
@@ -1214,3 +1214,68 @@ h6 {
 .absolute {
     position: absolute !important;
 }
+
+.accordion .card {
+    border: none !important;
+}
+
+.accordion .card .card-header {
+    border-bottom: 2px solid #000;
+    border-radius: 0 !important;
+}
+
+
+.accordion .card .card-title a {
+    font-size: 1vw;
+    font-weight: 600;
+    line-height: 2em;
+}
+
+.accordion .card .card-title a::after {
+    font-size: 2vw !important;
+    font-weight: 600;
+    line-height: 2em;
+}
+
+.accordion .accordion-toggle {
+    padding: 1vw 0 !important;
+}
+
+.accordion .card-body {
+    padding: 15px 0;
+}
+
+.accordion ul {
+    padding: 0;
+}
+
+.accordion .card-body ul li {
+    list-style: none;
+}
+
+.accordion .card-body ul li a, .accordion .card-body * {
+    font-size: 1vw;
+    color: #4d4d4d;
+    font-weight: 500;
+}
+
+.accordion .form-check-input{
+    border: 2px solid #000
+}
+
+.accordion .form-check-input:checked {
+    background-color: #000;
+    border-color: #000;
+    background-image: none !important;
+}
+
+.news-item-detail {
+    margin: 30px 0;
+}
+
+.doodle.doodle-news {
+    bottom: 2vw;
+    left: -6vw;
+    width: 20vw;
+    max-width: 100vw;
+  }
