--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     background: #fbf248be;
     color: #000;
     text-shadow: none;
-  }
+}
 
 body {
     font-family: Poppins, sans-serif !important;
@@ -23,11 +23,12 @@ a:hover {
     padding-top: 20px
 }
 
-.header-display.desktop.dark .header-row{
+.header-display.desktop.dark .header-row {
     padding-bottom: 0 !important;
 }
 
-.header-display.desktop.dark, .header-display.desktop.dark .header-logo-display {
+.header-display.desktop.dark,
+.header-display.desktop.dark .header-logo-display {
     background: #000;
 }
 
@@ -311,6 +312,11 @@ img.img-fluid.img-contact {
     width: 80%
 }
 
+#footer{
+    margin-top: 0;
+    border: none !important;
+}
+
 footer#footer {
     background: #111
 }
@@ -408,7 +414,6 @@ button.btn.btn-large.btn-block.btn-primary:hover {
 .container-newest {
     position: relative;
     width: 100%;
-    cursor: pointer;
     margin-bottom: 10px
 }
 
@@ -481,7 +486,6 @@ img.img-overlay-team {
 }
 
 .container-img-team {
-    cursor: pointer;
     margin-top: 10px
 }
 
@@ -636,7 +640,6 @@ img.img-after-hover {
     margin-right: 3px;
     margin-left: 3px;
     text-indent: -999px;
-    cursor: pointer;
     background-color: #fff;
     background-clip: padding-box;
     border: 0;
@@ -778,13 +781,12 @@ a.uk-slidenav svg polyline {
     position: absolute;
     bottom: 0;
     width: 100%;
-    text-align: center;    
+    text-align: center;
     z-index: 100;
-  }
+}
 
 i.bi.bi-chevron-compact-down {
     font-size: 5vw;
-    cursor: pointer;
 }
 
 html {
@@ -833,7 +835,7 @@ html {
     left: 0;
     margin-left: -5vw;
     top: 10vh;
-  }
+}
 
 .doodle.doodle-timeline {
     margin-left: -75px;
@@ -918,7 +920,6 @@ h6 {
 
 .uk-slider-items li:hover .team-img-hover {
     opacity: 1 !important;
-    cursor: pointer
 }
 
 .desc-team {
@@ -978,7 +979,7 @@ h6 {
 }
 
 .scroll-button-padding {
-    padding: 0 3vw 0 0 !important
+    padding: 0 2vw 0 0 !important
 }
 
 .timeline img {
@@ -1099,7 +1100,7 @@ h6 {
 .tabs .nav-tabs .nav-item a {
     border: none !important;
     color: #000 !important;
-    background: none !important;    
+    background: none !important;
     font-size: 2vw;
     font-weight: 500;
     text-transform: uppercase;
@@ -1107,7 +1108,7 @@ h6 {
 
 .tabs .nav-tabs .nav-item a.active {
     color: #000;
-    font-weight: bold;    
+    font-weight: bold;
     text-decoration: underline;
 }
 
@@ -1128,42 +1129,42 @@ h6 {
     margin: auto;
 }
 
-  .pilot-post img {
+.pilot-post img {
     width: auto;
     height: auto;
     position: relative;
     max-width: 21vw;
     top: 1vw;
     left: -3vw;
-  }
+}
 
-  .pilot-title-wrap {
+.pilot-title-wrap {
     text-align: center;
     padding: 15px;
-  }
+}
 
-  .pilot-title-wrap .title {
+.pilot-title-wrap .title {
     font-size: 1vw;
     font-weight: bold;
     color: #000;
     margin-bottom: 10px;
-  }
+}
 
-  .pilot-title-wrap .author {
+.pilot-title-wrap .author {
     font-size: 1vw;
     font-weight: 500;
     color: #4d4d4d;
     margin: 0;
-  }
+}
 
 .catalog-item-wrap {
     left: -4vw;
     position: absolute;
     top: 25%;
     z-index: 1;
-  }
+}
 
-  .catalog-item-wrap .catalog-title {
+.catalog-item-wrap .catalog-title {
     font-size: 6vw;
     color: #000;
     font-weight: bold;
@@ -1192,12 +1193,13 @@ h6 {
 }
 
 .catalog-item-wrap button:hover {
-    background:#fbf348;
+    background: #fbf348;
     color: #000;
     border: 1px solid #000;
 }
 
-.catalog-item-wrap button::before, .catalog-item-wrap button::after {
+.catalog-item-wrap button::before,
+.catalog-item-wrap button::after {
     text-align: none !important;
 }
 
@@ -1251,15 +1253,17 @@ h6 {
 
 .accordion .card-body ul li {
     list-style: none;
+    padding: 7.5px 0;
 }
 
-.accordion .card-body ul li a, .accordion .card-body * {
+.accordion .card-body ul li a,
+.accordion .card-body * {
     font-size: 1vw;
     color: #4d4d4d;
     font-weight: 500;
 }
 
-.accordion .form-check-input{
+.accordion .form-check-input {
     border: 2px solid #000
 }
 
@@ -1274,8 +1278,17 @@ h6 {
 }
 
 .doodle.doodle-news {
-    bottom: 2vw;
+    bottom: 7vw;
     left: -6vw;
     width: 20vw;
     max-width: 100vw;
-  }
+}
+
+section.dark-section {
+    background:#111111;
+}
+
+section.dark-section > * > * > * > * > *, section.dark-section > * > * > * > *, section.dark-section > * > * > * {
+    color: #fff !important;
+    line-height: 1.2em;
+}
