--- a/css/style.css
+++ b/css/style.css
@@ -258,8 +258,9 @@ p {
 }
 
 .single-paragraph {
-    font-size: 12px;
-}
+    font-size: 1vw;
+    margin-top: 0.5em;
+  }
 
 .tag-featured {
     width: 70%;
@@ -1319,4 +1320,115 @@ section.dark-section>*>*>*>*,
 section.dark-section>*>*>* {
     color: #fff !important;
     line-height: 1.2em;
+}
+
+.single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"] {
+    background-color: unset;
+    border-color: unset;
+    color: #000;
+}
+
+.single-section .owl-carousel .owl-nav button.owl-next::before, .single-section .owl-carousel .owl-nav button.owl-prev::before {
+    font-size: 2em;
+}
+
+.single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"].hover, .single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"]:hover {
+    background-color: unset;
+    border-color: unset;
+}
+
+.vh-10{
+    height: 100vh !important;
+}
+
+#publishedBanner .owl-item .nav-link img {
+    border-radius: 0 !important;
+    border: 4px solid #000;
+}
+
+.published-overlay{
+    opacity: 0;
+    transition: 1s;
+    position: absolute;
+    z-index: 2;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(239, 255, 8);
+    top:0;
+    left: 0;
+    padding: 8px 16px 8px 16px;
+}
+
+.nav-link.active .published-overlay{                                        
+    opacity: 0.5;
+}
+
+#publishedBanner .owl-stage-outer{
+    overflow: visible;
+    position: absolute;
+    bottom: 15%;
+}
+
+#publishedBanner {
+    display: flex;
+    flex-direction: column;
+}
+
+.image-carousel-wrapper {
+    overflow-x: hidden;
+    position: relative;
+    height: 25%;
+    width: 90%;
+    margin: auto;
+    margin-top: -10vh;
+  }
+
+  .banner-desc-wrapper {
+    position: relative;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+#publishedBanner .nav-link {
+    padding: 0 !important;
+}
+
+#publishedDesc p {
+    font-size: 1.5vw;
+}
+
+.published-title-cta-btn {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.published-title-cta p{
+    font-size: 1vw;
+    margin-top: 5vw;
+    color: #000;
+    width: 50%;
+}
+
+.btn-primary.yellow {
+    background-color: #fbf348 !important;
+    border-radius: 0;
+    border: none;
+    color: #000;
+    font-size: 1.2vw;
+    padding: 5px 20px;
+}
+
+button a, button a:hover {
+    color: unset;
+    text-decoration: unset !important;
+}
+
+#publishedBanner .owl-nav {
+    top: 75%;
+    font-size: 1.5vw;
+    width: 95%;
+    left: 2%;
 }
