--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ p {
 .single-paragraph {
     font-size: 1vw;
     margin-top: 0.5em;
-  }
+}
 
 .tag-featured {
     width: 70%;
@@ -1328,16 +1328,18 @@ section.dark-section>*>*>* {
     color: #000;
 }
 
-.single-section .owl-carousel .owl-nav button.owl-next::before, .single-section .owl-carousel .owl-nav button.owl-prev::before {
+.single-section .owl-carousel .owl-nav button.owl-next::before,
+.single-section .owl-carousel .owl-nav button.owl-prev::before {
     font-size: 2em;
 }
 
-.single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"].hover, .single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"]:hover {
+.single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"].hover,
+.single-section .owl-carousel:not(.nav-arrows-1):not(.show-nav-title) .owl-nav button[class*="owl-"]:hover {
     background-color: unset;
     border-color: unset;
 }
 
-.vh-10{
+.vh-10 {
     height: 100vh !important;
 }
 
@@ -1346,7 +1348,7 @@ section.dark-section>*>*>* {
     border: 4px solid #000;
 }
 
-.published-overlay{
+.published-overlay {
     opacity: 0;
     transition: 1s;
     position: absolute;
@@ -1354,16 +1356,16 @@ section.dark-section>*>*>* {
     height: 100%;
     width: 100%;
     background-color: rgb(239, 255, 8);
-    top:0;
+    top: 0;
     left: 0;
     padding: 8px 16px 8px 16px;
 }
 
-.nav-link.active .published-overlay{                                        
+.nav-link.active .published-overlay {
     opacity: 0.5;
 }
 
-#publishedBanner .owl-stage-outer{
+#publishedBanner .owl-stage-outer {
     overflow: visible;
     position: absolute;
     bottom: 15%;
@@ -1381,22 +1383,24 @@ section.dark-section>*>*>* {
     width: 90%;
     margin: auto;
     margin-top: -10vh;
-  }
+}
 
-  .banner-desc-wrapper {
+.banner-desc-wrapper {
     position: relative;
     width: 90%;
     margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+}
 
 #publishedBanner .nav-link {
     padding: 0 !important;
 }
 
-#publishedDesc p, .single-paragraph, .single-paragraph p {
+#publishedDesc p,
+.single-paragraph,
+.single-paragraph p {
     font-size: 1.5vw;
 }
 
@@ -1405,7 +1409,7 @@ section.dark-section>*>*>* {
     justify-content: space-evenly;
 }
 
-.published-title-cta p{
+.published-title-cta p {
     font-size: 1vw;
     margin-top: 5vw;
     color: #000;
@@ -1421,7 +1425,8 @@ section.dark-section>*>*>* {
     padding: 5px 20px;
 }
 
-button a, button a:hover {
+button a,
+button a:hover {
     color: unset;
     text-decoration: unset !important;
 }
@@ -1433,7 +1438,8 @@ button a, button a:hover {
     left: 2%;
 }
 
-.text-justfify, .text-justify p {
+.text-justfify,
+.text-justify p {
     text-align: justify !important;
 }
 
@@ -1443,4 +1449,20 @@ button a, button a:hover {
 
 article p {
     font-size: 1.5vw;
+}
+
+.menu.current {
+    color: #fbf348 !important;
+}
+
+.menu.current:after {
+    transform: scaleX(0.5);
+    transform-origin: bottom left;
+    left: 25%;
+}
+
+.menu.current:hover:after {
+    transform: scaleX(0.5);
+    transform-origin: bottom left;
+    left: 25%;
 }
